# Hospital-Management-System

./: .gitignore  CMakeLists.txt  LICENSE  README.md  create_hms_project.sh
data/: appointments.txt  doctors.txt  patients.txt
include/: Appointment.h  Billing.h  Doctor.h  Inventory.h  Patient.h  Utils.h
src/: Appointment.cpp  Billing.cpp  Doctor.cpp  Inventory.cpp  Patient.cpp  Utils.cpp  main.cpp
